gitops/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: circle-prod
  labels:
    name: circle-prod
    environment: production
    app: circle-of-trust
